Bug 1670545 - Disable mesa_glthread on X11/EGL, r=aosmond

The combination currently triggers crashes - not on Wayland though.
Put the code into non-shared code to not clutter `GLContextProviderEGL`.

Differential Revision: https://phabricator.services.mozilla.com/D125403